--- a/E-Commerce/appsettings.json
+++ b/E-Commerce/appsettings.json
@@ -9,9 +9,10 @@
     }
   },
   "JWT": {
-    "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000",
+    "Issuer": "https://localhost:7166",
+    "Audience": "https://localhost:7166",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+
   },
   "AllowedHosts": "*"
 }
