--- a/Customers/Customers.csproj
+++ b/Customers/Customers.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Adress\Adresses.csproj" />
     <ProjectReference Include="..\Comman\Comman.csproj" />
   </ItemGroup>
 
