--- a/E-Commerce/E-Commerce.csproj
+++ b/E-Commerce/E-Commerce.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\Category\Category.csproj" />
     <ProjectReference Include="..\Comman\Comman.csproj" />
     <ProjectReference Include="..\Customers\Customers.csproj" />
+    <ProjectReference Include="..\Delivires\Delivires.csproj" />
     <ProjectReference Include="..\Orders\Orders.csproj" />
     <ProjectReference Include="..\Payment\Payments.csproj" />
     <ProjectReference Include="..\Products\Products.csproj" />
